log
Sat Mar 12 14:17:23 HSP 2022: 
 tests:  0|7
total_score: 0/70
41381e4
Sat Mar 12 14:22:37 HSP 2022: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
9a5649e
Sat Mar 12 14:23:17 HSP 2022: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
ef261ec
Sat Mar 12 14:29:45 HSP 2022: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|5
total_score: 20/70
88617b4
Sat Mar 12 14:51:07 HSP 2022: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
test.c: In function 'crearPersona':
exercises.c:63:16: error: 'sujeto' is used uninitialized in this function [-Werror=uninitialized]
    sujeto->edad=edad;
    ~~~~~~~~~~~~^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
b70e744
Sat Mar 12 15:07:05 HSP 2022: 
 exercises.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
test.c: In function 'crearPersona':
exercises.c:66:11: error: 'sujeto' is used uninitialized in this function [-Werror=uninitialized]
    *sujeto=aux;
    ~~~~~~~^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
ce556fd
Sat Mar 12 15:10:19 HSP 2022: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  0|0
96581af
Sat Mar 12 16:04:20 HSP 2022: 
 exercises.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  2|5
total_score: 20/70
c53e05d
Sat Mar 12 16:05:00 HSP 2022: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
0ebe53d
Sat Mar 12 16:05:45 HSP 2022: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
f1c117d
Sat Mar 12 16:12:29 HSP 2022: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:64:16: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
    sujeto->edad=&edad;
                ^
exercises.c:66:26: error: passing argument 2 of 'strcpy' from incompatible pointer type [-Werror=incompatible-pointer-types]
    strcpy(sujeto->nombre,&nombre);
                          ^
In file included from test.c:3:0:
c:\mingw\include\string.h:79:40: note: expected 'const char *' but argument is of type 'char **'
 _CRTIMP __cdecl __MINGW_NOTHROW  char *strcpy (char *, const char *);
                                        ^~~~~~
In file included from test.c:5:0:
exercises.c:67:23: error: passing argument 2 of 'strcpy' from incompatible pointer type [-Werror=incompatible-pointer-types]
    strcpy(sujeto->rut,&rut);
                       ^
In file included from test.c:3:0:
c:\mingw\include\string.h:79:40: note: expected 'const char *' but argument is of type 'char **'
 _CRTIMP __cdecl __MINGW_NOTHROW  char *strcpy (char *, const char *);
                                        ^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
5d8f694
